# auto-reports

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml  stocks.json
.claude/: settings.local.json
config/: DMS.yaml  DN오토모티브.yaml  GRT.yaml  HD현대에너지솔루션.yaml  HLB.yaml  HLB이노베이션.yaml  HPSP.yaml  ISC.yaml  KEC.yaml  LS ELECTRIC.yaml  LS머트리얼즈.yaml  OCI.yaml  OCI홀딩스.yaml  RFHIC.yaml  RF머트리얼즈.yaml  RF시스템즈.yaml  THE E&M.yaml  가온전선.yaml  고영.yaml  그린리소스.yaml  금양그린파워.yaml  금화피에스시.yaml  기가비스.yaml  나무기술.yaml  네오셈.yaml  네오티스.yaml  네오펙트.yaml  네패스.yaml  네패스아크.yaml  누리플렉스.yaml  다산네트웍스.yaml  다원넥스뷰.yaml  대덕전자.yaml  대성하이텍.yaml  대우건설.yaml  대주전자재료.yaml  대창솔루션.yaml  대한광통신.yaml  더블유씨피.yaml  더코디.yaml  (+159 more)
prompts/: analysis_prompt.md
src/auto_reports/: __init__.py  cli.py  config.py  orchestrator.py  pipeline.py
src/auto_reports/analyzers/: __init__.py  financial.py  overhang.py
src/auto_reports/collectors/: __init__.py  base.py  dart_collector.py  fnguide_collector.py  naver_collector.py  news_collector.py
src/auto_reports/fetchers/: __init__.py  dart_business.py  dart_html.py  dart_report.py  dart_supplementary.py  market_data.py  opendart.py  rate_limiter.py
src/auto_reports/generators/: __init__.py  chart.py  (+1 more)
tests/: test_analysis_parse.py  test_analyzers.py  test_classifier.py  test_config.py  test_exchange_sales.py  test_llm_summarizers.py  test_minervini.py  test_models.py  test_overhang_fixes.py  test_overhang_issuance.py  test_overhang_llm.py  test_summarizer_parse.py
tests/fixtures/: contract.json  convert-price-change.json  convert.json  issue.json  performance.json
(+57 files in other folders)
