[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-reports"
version = "0.1.0"
description = "Korean stock financial data collector, parser, and investment report generator"
requires-python = ">=3.10"
dependencies = [
    # Shared
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "python-dotenv>=1.0",
    "opendartreader>=0.2",

    # Collection (from opendart)
    "selenium>=4.20",
    "pandas>=2.0",
    "numpy>=1.26",
    "feedparser>=6.0",
    "loguru>=0.7",

    # Parsing & Analysis (from finance-parser)
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "finance-datareader>=0.9",
    "click>=8.1",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "rich>=13.0",
    "openai>=1.0",
    "PyPDF2>=3.0",
    "matplotlib>=3.7",
    "mplfinance>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[project.scripts]
auto-reports = "auto_reports.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"
